pos_ctrl/third_party/leadshine/LTDMC.h

typedef unsigned long       DWORD;
typedef unsigned short      WORD;
//设置和读取打印模式
DMC_API short __stdcall dmc_set_debug_mode(WORD mode,const char* pFileName);
DMC_API short __stdcall dmc_get_debug_mode(WORD* mode,char* pFileName);
DMC_API short __stdcall dmc_board_init(void); 	//初始化控制卡
DMC_API short __stdcall dmc_board_init_onecard(WORD CardNo); 	////客户定制独立开卡 初始化一张控制卡
DMC_API short __stdcall dmc_board_close_onecard(WORD CardNo); 	////客户定制独立关卡 关闭一个控制卡
DMC_API short __stdcall	dmc_get_CardInfList(WORD* CardNum,DWORD* CardTypeList,WORD* CardIdList);//读取控制卡信息列表
DMC_API short __stdcall dmc_board_close(void);	//关闭控制卡
DMC_API short __stdcall dmc_board_reset(void);   //硬件复位
DMC_API short __stdcall dmc_board_reset_onecard(WORD CardNo);//客户定制单独硬件复位
DMC_API short __stdcall dmc_soft_reset(WORD CardNo);//控制卡软复位（pci卡） 热复位（总线卡）
DMC_API short __stdcall dmc_cool_reset(WORD CardNo);//控制卡冷复位
DMC_API short __stdcall dmc_original_reset(WORD CardNo);//控制卡初始复位
DMC_API short __stdcall dmc_get_card_ID (WORD CardNo,DWORD *CardID);	//读取控制卡卡号
DMC_API short __stdcall dmc_get_card_version(WORD CardNo,DWORD *CardVersion);	//读取控制卡硬件版本
DMC_API short __stdcall dmc_get_card_soft_version(WORD CardNo,DWORD *FirmID,DWORD *SubFirmID);	//读取控制卡硬件的固件版本
DMC_API short __stdcall dmc_get_card_lib_version(DWORD *LibVer);	//读取控制卡动态库版本
DMC_API short __stdcall dmc_get_total_axes(WORD CardNo,DWORD *TotalAxis); 	//读取指定卡轴数
DMC_API short __stdcall dmc_get_total_liners(WORD CardNo,DWORD *TotalLiner); //读取指定卡插补坐标系数
DMC_API short __stdcall dmc_get_total_ionum(WORD CardNo,WORD *TotalIn,WORD *TotalOut);//获取本地IO点数
DMC_API short __stdcall dmc_get_total_adcnum(WORD CardNo,WORD* TotalIn,WORD* TotalOut);//获取本地ADDA输入输出数
//密码函数
DMC_API short __stdcall dmc_check_sn(WORD CardNo, const char * str_sn);
DMC_API short __stdcall dmc_write_sn(WORD CardNo, const char * str_sn);
//下载参数文件
DMC_API short __stdcall dmc_download_configfile(WORD CardNo,const char *FileName);
//下载固件文件
DMC_API short __stdcall dmc_download_firmware(WORD CardNo,const char *FileName);
//虚拟IO映射
DMC_API short __stdcall dmc_set_io_map_virtual(WORD CardNo,WORD bitno,WORD MapIoType,WORD MapIoIndex,double Filter);
DMC_API short __stdcall dmc_get_io_map_virtual(WORD CardNo,WORD bitno,WORD* MapIoType,WORD* MapIoIndex,double* Filter);
DMC_API short __stdcall dmc_read_inbit_virtual(WORD CardNo,WORD bitno); //读取输入口的状态
/*********************专用IO信号************************/
DMC_API short __stdcall dmc_set_axis_io_map(WORD CardNo,WORD Axis,WORD IoType,WORD MapIoType,WORD MapIoIndex,double Filter);
DMC_API short __stdcall dmc_get_axis_io_map(WORD CardNo,WORD Axis,WORD IoType,WORD* MapIoType,WORD* MapIoIndex,double* Filter);
DMC_API short __stdcall dmc_set_special_input_filter(WORD CardNo,double Filter);//设置所有专用IO滤波时间