DMC-E系列控制卡例程/VB.net/例2_连续运动/例2_连续运动/LTDMC.vb

Option Strict Off
Option Explicit On
Public Module ModuleCard


    '板卡配置 控制卡初始化函数 大于0：卡数，小于0：绝对值减1表示拨码重号，等于0：没找到控制卡硬件或初始化失败</returns>
    Declare Function dmc_board_init Lib "LTDMC.dll" () As Int16
    Declare Function dmc_board_init_onecard Lib "LTDMC.dll" (ByVal CardNo As Int16) As Int16
    Declare Function dmc_board_close_onecard Lib "LTDMC.dll" (ByVal CardNo As Int16) As Int16

    '控制卡关闭函数 资源释放 错误代码
    Declare Function dmc_board_close Lib "LTDMC.dll" () As Int16

    '控制卡硬件复位 错误代码
    Declare Function dmc_board_reset Lib "LTDMC.dll" () As Int16
    Declare Function dmc_board_reset_onecard Lib "LTDMC.dll" (ByVal CardNo As Int16) As Int16
    '读取初始化后控制卡信息
    '</summary>
    '<param name="CardNum">初始化成功的卡数</param>
    '<param name="CardTypeList">卡类型列表：卡类型采用16进制表示，如0x5410,0x5800</param>
    '<param name="CardIdList">卡ID列表</param>
    '<returns>错误代码

    Declare Function dmc_get_CardInfList Lib "LTDMC.dll" (ByRef CardNum As UInt16, ByVal CardTypeList() As UInt32, ByVal CardIdList() As UInt16) As Int16
    ' <summary>
    ' 读取控制卡版本信息
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="CardVersion">控制卡硬件版本号</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_soft_reset Lib "LTDMC.dll" (ByVal CardNo As UInt16) As Int16
    Declare Function dmc_cool_reset Lib "LTDMC.dll" (ByVal CardNo As UInt16) As Int16
    Declare Function dmc_original_reset Lib "LTDMC.dll" (ByVal CardNo As Int16) As Int16
    Declare Function dmc_get_card_ID Lib "LTDMC.dll" (ByVal CardNo As Int16, ByRef CardID As UInt32) As Int16
    Declare Function dmc_get_card_version Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef CardVersion As UInt32) As Int16
    ' <summary> 
    ' </summary>
    ' <param name="CardNo"></param>
    ' <param name="FirmID">控制卡固件类型</param>
    ' <param name="SubFirmID">控制卡固件版本号</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_card_soft_version Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef FirmID As UInt32, ByRef SubFirmID As UInt32) As Int16
    ' <summary>
    ' 读取动态库版本号 用日期表示
    ' </summary>
    ' <param name="LibVer">版本号</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_card_lib_version Lib "LTDMC.dll" (ByRef LibVer As Int32) As Int16
    ' <summary>
    ' 设置函数库函数调用参数打印输出模式
    ' </summary>
    ' <param name="mode">打印输出模式：0-不输出，1-输出</param>
    ' <param name="FileName">文件名：相对或绝对地址文件</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_debug_mode Lib "LTDMC.dll" (ByVal mode As UInt16, ByVal FileName As String) As Int16
    ' <summary>
    ' 读取函数库函数调用参数打印输出模式
    ' </summary>
    ' <param name="mode">打印输出模式：0-不输出，1-输出</param>
    ' <param name="FileName">文件名：相对或绝对地址文件</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_debug_mode Lib "LTDMC.dll" (ByVal mode As UInt16, ByVal FileName As String) As Int16
    '密码管理
    ' <summary>
    ' 密码校验 失败3次之后 无法再次校验
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="check_sn">旧密码</param>
    ' <returns>校验状态：0-失败，1-成功</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_total_liners Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalAxis As Long) As Integer
    Declare Function dmc_get_total_adcnum Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalIn As Integer, ByRef TotalOut As Integer) As Integer
    Declare Function dmc_get_total_ionum Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef TotalIn As UInt16, ByRef TotalOut As UInt16) As Int16

    'Declare Function dmc_set_AxisIoMap Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal MsgType As UInt16, ByVal MapPortType As UInt16, ByVal MapPortIndex As UInt16, ByVal Filter As UInt32) As Int16
    'Declare Function dmc_get_AxisIoMap Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal MsgType As UInt16, ByRef MapPortType As UInt16, ByRef MapPortIndex As UInt16, ByRef Filter As UInt32) As Int16
    Declare Function dmc_check_sn Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal check_sn As String) As Int16
    ' <summary>
    ' 密码修改
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="new_sn">新密码</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_write_sn Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal new_sn As String) As Int16
    '下载参数文件
    ' <summary>
    ' 下载参数文件
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="FileName">文件名：相对或绝对地址文件</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_download_configfile Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal FileName As String) As Int16
    '下载固件文件
    ' <summary>
    ' 下载固件文件
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="FileName">文件名：相对或绝对地址文件</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_download_firmware Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal FileName As String) As Int16
    ' <summary>
    ' 读取控制卡轴数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="TotalAxis">轴数</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_total_axes Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef TotalAxis As UInt32) As Int16

    '3800 5800专用 轴IO映射配置
    ' <summary>
    ' 设置轴IO映射
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="IoType">轴IO信号类型</param>
    ' <param name="MapIoType">轴IO映射IO口类型</param>
    ' <param name="MapIoIndex">轴IO映射IO口号</param>
    ' <param name="Filter">滤波时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_axis_io_map Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal IoType As UInt16, ByVal MapIoType As UInt16, ByVal MapIoIndex As UInt16, ByVal Filter As Double) As Int16
    ' <summary>
    ' 读取轴IO映射
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="IoType">轴IO信号类型</param>
    ' <param name="MapIoType">轴IO映射IO口类型</param>
    ' <param name="MapIoIndex">轴IO映射IO口号</param>
    ' <param name="Filter">滤波时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_axis_io_map Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal IoType As UInt16, ByRef MapIoType As UInt16, ByRef MapIoIndex As UInt16, ByRef Filter As Double) As Int16
    ' <summary>
    ' 设置所有专用IO滤波时间
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="filter_time">滤波时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_special_input_filter Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal filter_time As Double) As Int16

    'DMC3800专用 虚拟IO映射  用于读取滤波后的IO口电平状态
    ' <summary>
    ' 设置虚拟IO映射
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">虚拟IO口号：0-15</param>
    ' <param name="MapIoType">轴IO映射IO口类型</param>
    ' <param name="MapIoIndex">轴IO映射IO口号</param>
    ' <param name="Filter">滤波时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_io_map_virtual Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16, ByVal MapIoType As UInt16, ByVal MapIoIndex As UInt16, ByVal Filter As Double) As Int16
    ' <summary>
    ' 读取虚拟IO映射
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">虚拟IO口号：0-15</param>
    ' <param name="MapIoType">轴IO映射IO口类型</param>
    ' <param name="MapIoIndex">轴IO映射IO口号</param>
    ' <param name="Filter">滤波时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_io_map_virtual Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16, ByRef MapIoType As UInt16, ByRef MapIoIndex As UInt16, ByRef Filter As Double) As Int16
    ' <summary>
    ' 读取滤波后的IO输入状态
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">虚拟IO口号：0-15</param>
    ' <returns>输入状态：0-低电平，1-高电平</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_inbit_virtual Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16) As Int16
